--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.background": "#1D3310",
-        "titleBar.activeBackground": "#294717",
-        "titleBar.activeForeground": "#F7FBF4"
+        "activityBar.background": "#43106D",
+        "titleBar.activeBackground": "#5E1798",
+        "titleBar.activeForeground": "#FCF9FE"
     }
 }
