--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.background": "#43106D",
-        "titleBar.activeBackground": "#5E1798",
-        "titleBar.activeForeground": "#FCF9FE"
+        "activityBar.background": "#581608",
+        "titleBar.activeBackground": "#7B1F0B",
+        "titleBar.activeForeground": "#FFFCFB"
     }
 }
