--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.background": "#581608",
-        "titleBar.activeBackground": "#7B1F0B",
-        "titleBar.activeForeground": "#FFFCFB"
+        "activityBar.background": "#511D14",
+        "titleBar.activeBackground": "#71291C",
+        "titleBar.activeForeground": "#FDF9F8"
     }
 }
